worked on the webpack.config. finished the package.json files. getting a better idea of the amount of work I will need to put in

--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "j.a.t.e.",
+  "name": "my_personal_text_editor",
   "scripts": {
     "dev": "webpack-dev-server",
     "build": "webpack --mode production",
