--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "j.a.t.e.",
+    "name": "my_personal_text_editor",
     "version": "1.0.0",
     "description": "",
     "main": "server.js",
